# spm-real-time-backend

./: .gitignore  README.md  docker-compose.yml  run_agent.sh  start.sh  stop_agent.sh
.github/workflows/: deploy.yml
agent/: CMakeLists.txt  Dockerfile
agent/include/: api_client.h  telemetry_generator.h
agent/proto/: telemetry.proto
agent/src/: api_client.cpp  api_client.h  main.cpp  telemetry_generator.cpp  telemetry_generator.h
api/: Dockerfile  go.mod  go.sum
api/cmd/server/: main.go
api/internal/config/: config.go
api/internal/db/: postgres.go  redis.go
api/internal/grpc/: handler.go
api/internal/service/: telemetry.go
api/internal/websocket/: manager.go
api/proto/: telemetry.pb.go  telemetry.proto
frontend/: vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Sidebar.jsx
frontend/src/components/Dashboard/: AgentCard.jsx  AgentGrid.jsx  DatabaseView.jsx  HistoryModal.jsx  MetricWidget.jsx  Overview.jsx  ProcessList.jsx
frontend/src/components/Layout/: Header.jsx
frontend/src/hooks/: useTelemetry.js
frontend/src/services/: websocket.js
frontend/src/styles/: App.css
